--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "workspaces": [
     "packages/*"
   ],
-  "dependencies": {},
   "devDependencies": {
-    "lerna": "^8.0.1"
+    "lerna": "^8.0.1",
+    "typescript": "^5.3.3"
   }
 }
