--- a/package.json
+++ b/package.json
@@ -6,10 +6,14 @@
   ],
   "scripts": {
     "build": "lerna run --stream build",
-    "clean": "lerna run --stream clean"
+    "clean": "lerna run --stream clean",
+    "test:unit": "jest"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.11",
+    "jest": "^29.7.0",
     "lerna": "^8.0.1",
+    "ts-jest": "^29.1.1",
     "typescript": "^5.3.3"
   }
 }
