--- a/package.json
+++ b/package.json
@@ -5,22 +5,14 @@
     "packages/*"
   ],
   "scripts": {
-    "build": "lerna run --stream build",
-    "clean": "lerna run --stream clean",
     "test:lint": "eslint --max-warnings=0 .",
     "test:unit": "jest"
   },
   "devDependencies": {
-    "@types/jest": "^29.5.11",
-    "@typescript-eslint/eslint-plugin": "^6.16.0",
-    "@typescript-eslint/parser": "^6.16.0",
     "eslint": "^8.56.0",
     "eslint-config-standard": "^17.1.0",
-    "eslint-config-standard-with-typescript": "^43.0.0",
     "eslint-plugin-jest": "^27.6.0",
     "jest": "^29.7.0",
-    "lerna": "^8.0.1",
-    "ts-jest": "^29.1.1",
-    "typescript": "^5.3.3"
+    "lerna": "^8.0.1"
   }
 }
