--- a/packages/kepler/package.json
+++ b/packages/kepler/package.json
@@ -9,16 +9,12 @@
     "type": "git",
     "url": "git+https://github.com/bugsnag/bugsnag-kepler.git"
   },
-  "scripts": {
-    "build": "tsc",
-    "clean": "rm -rf dist"
-  },
   "bugs": {
     "url": "https://github.com/bugsnag/bugsnag-kepler/issues"
   },
   "type": "module",
-  "main": "dist/kepler.js",
+  "main": "lib/kepler.js",
   "files": [
-    "dist"
+    "lib"
   ]
 }
