--- a/packages/kepler/package.json
+++ b/packages/kepler/package.json
@@ -18,6 +18,7 @@
     "lib"
   ],
   "dependencies": {
-    "@bugsnag/core": "^7.19.0"
+    "@bugsnag/core": "^7.19.0",
+    "iserror": "^0.0.2"
   }
 }
