--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "test:unit": "jest"
   },
   "devDependencies": {
+    "@react-native/babel-preset": "^0.73.19",
     "@types/jest": "^29.5.11",
     "eslint": "^8.56.0",
     "eslint-config-standard": "^17.1.0",
@@ -16,7 +17,8 @@
     "eslint-plugin-jest": "^27.6.0",
     "jest": "^29.7.0",
     "lerna": "^8.0.1",
-    "ts-jest": "^29.1.1",
+    "react": "^17.0.2",
+    "react-native": "^0.67.3",
     "typescript": "^5.3.3"
   }
 }
