--- a/package.json
+++ b/package.json
@@ -11,14 +11,15 @@
   "devDependencies": {
     "@react-native/babel-preset": "^0.73.19",
     "@types/jest": "^29.5.11",
+    "@types/react": "^18.2.0",
     "eslint": "^8.56.0",
     "eslint-config-standard": "^17.1.0",
     "eslint-config-standard-with-typescript": "^43.0.0",
     "eslint-plugin-jest": "^27.6.0",
     "jest": "^29.7.0",
     "lerna": "^8.0.1",
-    "react": "^17.0.2",
-    "react-native": "^0.67.3",
+    "react": "^18.2.0",
+    "react-native": "^0.72.0",
     "typescript": "^5.3.3"
   }
 }
