--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   ],
   "scripts": {
     "test:lint": "eslint --max-warnings=0 .",
-    "test:unit": "jest"
+    "test:unit": "jest",
+    "local-npm:publish": "lerna publish \"$VERSION_IDENTIFIER\" --yes --force-publish --exact --no-push --no-git-reset --no-git-tag-version --registry 'http://0.0.0.0:5539'",
+    "local-npm:start": "verdaccio --config local-npm-config.yml --listen 0.0.0.0:5539"
   },
   "devDependencies": {
     "@react-native/babel-preset": "^0.73.19",
@@ -20,6 +22,7 @@
     "lerna": "^8.0.1",
     "react": "^18.2.0",
     "react-native": "^0.72.0",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "verdaccio": "^5.29.0"
   }
 }
