--- a/packages/kepler-native/package.json
+++ b/packages/kepler-native/package.json
@@ -6,7 +6,6 @@
   "files": ["dist"],
   "scripts": {
     "clean": "rm -rf node_modules buildinfo.json dist",
-    "test": "jest --colors",
     "lint": "eslint src tst --ext .ts,.tsx",
     "lint:fix": "eslint src tst --ext .ts,.tsx --fix",
     "compile": "tsc -p tsconfig-build.json",
@@ -22,11 +21,9 @@
     "@babel/runtime": "^7.20.0",
     "@react-native/eslint-config": "0.72.2",
     "@typescript-eslint/eslint-plugin": "^5.30.0",
-    "babel-jest": "^28.0.0",
     "metro-react-native-babel-preset": "^0.76.5",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.6.2",
-    "ts-jest": "^28.0.0"
+    "prettier": "^2.6.2"
   },
   "peerDependencies": {
     "react": "*",
