--- a/packages/kepler-native/package.json
+++ b/packages/kepler-native/package.json
@@ -3,7 +3,9 @@
   "version": "0.0.0",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "clean": "rm -rf node_modules buildinfo.json dist",
     "lint": "eslint src tst --ext .ts,.tsx",
@@ -31,7 +33,9 @@
   },
   "kepler": {
     "projectType": "turbomodule",
-    "targets": ["tv"],
+    "targets": [
+      "tv"
+    ],
     "api": 0.1,
     "keplerInitializationSharedLibrary": "BugsnagKeplerNative",
     "autolink": {
