--- a/packages/kepler/package.json
+++ b/packages/kepler/package.json
@@ -22,6 +22,8 @@
   "dependencies": {
     "@bugsnag/core": "^7.19.0",
     "@bugsnag/delivery-fetch": "^7.20.0",
+    "@bugsnag/plugin-react": "^7.19.0",
+    "@bugsnag/plugin-react-native-global-error-handler": "^7.22.3",
     "iserror": "^0.0.2"
   }
 }
