--- a/package.json
+++ b/package.json
@@ -11,18 +11,21 @@
     "local-npm:start": "verdaccio --config local-npm-config.yml --listen 0.0.0.0:5539"
   },
   "devDependencies": {
-    "@react-native/babel-preset": "^0.73.19",
-    "@types/jest": "^29.5.11",
-    "@types/react": "^18.2.0",
-    "eslint": "^8.56.0",
+    "@babel/core": "^7.20.0",
+    "@babel/runtime": "^7.20.0",
+    "@react-native/eslint-config": "0.72.2",
+    "@types/jest": "^28.0.0",
+    "@types/react": "^18.0.24",
+    "@typescript-eslint/eslint-plugin": "^5.30.0",
+    "eslint": "^8.12.0",
     "eslint-config-standard": "^17.1.0",
-    "eslint-config-standard-with-typescript": "^43.0.0",
     "eslint-plugin-jest": "^27.6.0",
-    "jest": "^29.7.0",
-    "lerna": "^8.0.1",
+    "jest": "^28.0.0",
+    "lerna": "^7.4.2",
+    "metro-react-native-babel-preset": "^0.76.5",
     "react": "^18.2.0",
     "react-native": "^0.72.0",
-    "typescript": "^5.3.3",
+    "typescript": "4.8.4",
     "verdaccio": "^5.29.0"
   }
 }
