--- a/packages/kepler-native/package.json
+++ b/packages/kepler-native/package.json
@@ -8,8 +8,8 @@
   ],
   "scripts": {
     "clean": "rm -rf node_modules buildinfo.json dist",
-    "lint": "eslint src tst --ext .ts,.tsx",
-    "lint:fix": "eslint src tst --ext .ts,.tsx --fix",
+    "lint": "eslint src --ext .ts,.tsx",
+    "lint:fix": "eslint src --ext .ts,.tsx --fix",
     "compile": "tsc -p tsconfig-build.json",
     "build": "npm run compile",
     "release": "npm-run-all lint test compile"
@@ -19,13 +19,7 @@
     "react-native-tscodegen-types": "0.66.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@babel/runtime": "^7.20.0",
-    "@react-native/eslint-config": "0.72.2",
-    "@typescript-eslint/eslint-plugin": "^5.30.0",
-    "metro-react-native-babel-preset": "^0.76.5",
-    "npm-run-all": "^4.1.5",
-    "prettier": "^2.6.2"
+    "npm-run-all": "^4.1.5"
   },
   "peerDependencies": {
     "react": "*",
