--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
     "react-native": "^0.72.0",
     "typescript": "4.8.4",
     "verdaccio": "^5.29.0"
+  },
+  "dependencies": {
+    "react-test-renderer": "^18.2.0"
   }
 }
