--- a/tsconfig.json
+++ b/tsconfig.json
@@ -65,7 +65,8 @@
   },
   "include": [
     "packages/kepler",
-    "packages/kepler-native"
+    "packages/kepler-native",
+    "packages/kepler-plugin-react-navigation"
   ],
   "exclude": [
     "node_modules", "babel.config.js", "metro.config.js", "jest.config.js"
