--- a/packages/kepler/package.json
+++ b/packages/kepler/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@bugsnag/core": "^7.19.0",
     "@bugsnag/kepler-native": "^0.1.0",
+    "@bugsnag/plugin-app-duration": "^7.19.0",
     "@bugsnag/plugin-browser-session": "^7.22.3",
     "@bugsnag/plugin-console-breadcrumbs": "^7.22.3",
     "@bugsnag/plugin-network-breadcrumbs": "^7.22.3",
