--- a/packages/kepler-native/CMakeLists.txt
+++ b/packages/kepler-native/CMakeLists.txt
@@ -16,16 +16,20 @@ endif()
 set(HEADERS
   kepler/turbo-modules/utils/reference_guard.h
   kepler/turbo-modules/utils/signal_handler.h
+  kepler/turbo-modules/utils/bsg_breadcrumb.h
   kepler/turbo-modules/BugsnagKeplerNative.h
   kepler/turbo-modules/BugsnagSafeSharedPtr.h
+  kepler/turbo-modules/BugsnagBreadcrumbBuffer.h
 )
 set(SOURCES
     kepler/turbo-modules/utils/reference_guard.cpp
     kepler/turbo-modules/utils/signal_handler.cpp
+    kepler/turbo-modules/utils/bsg_breadcrumb.cpp
     kepler/turbo-modules/BugsnagClient.cpp
     kepler/turbo-modules/BugsnagFileIO.cpp
     kepler/turbo-modules/BugsnagKeplerNative.cpp
     kepler/turbo-modules/BugsnagSafeSharedPtr.cpp
+    kepler/turbo-modules/BugsnagBreadcrumbBuffer.cpp
     kepler/AutoLinkInit.cpp
 )
 
