--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-native/eslint-config": "0.72.2",
     "@types/jest": "^28.0.0",
     "@types/react": "^18.0.24",
+    "@types/react-test-renderer": "^18.2.0",
     "@typescript-eslint/eslint-plugin": "^5.30.0",
     "eslint": "^8.12.0",
     "eslint-config-standard": "^17.1.0",
@@ -25,8 +26,8 @@
     "metro-react-native-babel-preset": "^0.76.5",
     "react": "^18.2.0",
     "react-native": "^0.72.0",
+    "react-test-renderer": "^18.2.0",
     "typescript": "4.8.4",
-    "verdaccio": "^5.29.0",
-    "react-test-renderer": "^18.2.0"
+    "verdaccio": "^5.29.0"
   }
 }
