--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "eslint-config-standard": "^17.1.0",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-jest": "^27.6.0",
+    "eslint-plugin-n": "^16.0.0",
     "jest": "^28.0.0",
     "lerna": "^7.4.2",
     "metro-react-native-babel-preset": "^0.76.5",
