--- a/packages/kepler-native/CMakeLists.txt
+++ b/packages/kepler-native/CMakeLists.txt
@@ -17,6 +17,8 @@ set(HEADERS
   kepler/turbo-modules/utils/bsg_reference_guard.h
   kepler/turbo-modules/utils/bsg_signal_handler.h
   kepler/turbo-modules/utils/bsg_breadcrumb.h
+  kepler/turbo-modules/utils/bsg_types.h
+  kepler/turbo-modules/utils/bsg_event.h
   kepler/turbo-modules/BugsnagKeplerNative.h
   kepler/turbo-modules/BugsnagSignalSafePtr.h
   kepler/turbo-modules/BugsnagBreadcrumbBuffer.h
@@ -25,7 +27,9 @@ set(SOURCES
     kepler/turbo-modules/utils/bsg_reference_guard.cpp
     kepler/turbo-modules/utils/bsg_signal_handler.cpp
     kepler/turbo-modules/utils/bsg_breadcrumb.cpp
+    kepler/turbo-modules/utils/bsg_event.cpp
     kepler/turbo-modules/BugsnagClient.cpp
+    kepler/turbo-modules/BugsnagEvent.cpp
     kepler/turbo-modules/BugsnagFileIO.cpp
     kepler/turbo-modules/BugsnagKeplerNative.cpp
     kepler/turbo-modules/BugsnagBreadcrumbBuffer.cpp
