--- a/packages/kepler-native/package.json
+++ b/packages/kepler-native/package.json
@@ -15,8 +15,7 @@
     "release": "npm-run-all lint test compile"
   },
   "dependencies": {
-    "@amzn/keplerscript-turbomodule-api": "^1.0.0",
-    "react-native-tscodegen-types": "0.71.0"
+    "@amzn/keplerscript-turbomodule-api": "^1.0.0"
   },
   "devDependencies": {
     "npm-run-all": "^4.1.5"
