Fix commands for installing/running/terminating app for kepler 0.8

--- a/local-npm-config.yml
+++ b/local-npm-config.yml
@@ -12,6 +12,7 @@ uplinks:
       token_env: AMZN_AUTHENTICATION
 log:
   level: trace
+max_body_size: 100mb
 packages:
   '@bugsnag/safe-json-stringify':
     access: $anonymous
