--- a/test/kepler-native-ut/CMakeLists.txt
+++ b/test/kepler-native-ut/CMakeLists.txt
@@ -31,7 +31,7 @@ find_package(turbomoduleAPI CONFIG REQUIRED)
 
 add_library(BugsnagNativeUT SHARED ${HEADERS} ${SOURCES} ${KEPLER_NATIVE_H} ${KEPLER_NATIVE_S})
 
-set(LIBRARIES turbomoduleAPI::turbomoduleAPI JsonContainer::JsonContainer)
+set(LIBRARIES turbomoduleAPI::turbomoduleAPI)
 
 if (CMAKE_SYSTEM_NAME STREQUAL Android)
     list(APPEND LIBRARIES
