--- a/package.json
+++ b/package.json
@@ -27,9 +27,9 @@
     "jest": "^28.0.0",
     "lerna": "^7.4.2",
     "metro-react-native-babel-preset": "^0.76.5",
-    "react": "^18.2.0",
-    "react-native": "^0.72.0",
-    "react-test-renderer": "^18.2.0",
+    "react": "18.2.0",
+    "react-native": "0.72.0",
+    "react-test-renderer": "18.2.0",
     "typescript": "4.8.4",
     "verdaccio": "^5.29.0"
   }
