Update turbomodules for kepler 0.20

--- a/packages/kepler-native/CMakeLists.txt
+++ b/packages/kepler-native/CMakeLists.txt
@@ -15,6 +15,8 @@ if (CMAKE_SYSTEM_NAME STREQUAL Android)
 endif()
 
 set(HEADERS
+  kepler/turbo-modules/generated/BugsnagFileIOSpec.h
+  kepler/turbo-modules/generated/BugsnagKeplerNativeSpec.h
   kepler/turbo-modules/external/buildid/build-id.h
   kepler/turbo-modules/utils/bsg_reference_guard.h
   kepler/turbo-modules/utils/bsg_exception_handler.h
@@ -32,6 +34,8 @@ set(HEADERS
   kepler/turbo-modules/BugsnagBreadcrumbBuffer.h
 )
 set(SOURCES
+    kepler/turbo-modules/generated/BugsnagFileIOSpec.cpp
+    kepler/turbo-modules/generated/BugsnagKeplerNativeSpec.cpp
     kepler/turbo-modules/external/buildid/build-id.c
     kepler/turbo-modules/utils/bsg_reference_guard.c
     kepler/turbo-modules/utils/bsg_exception_handler.cpp
