--- a/packages/kepler-plugin-react-navigation/package.json
+++ b/packages/kepler-plugin-react-navigation/package.json
@@ -18,7 +18,6 @@
   "license": "MIT",
   "devDependencies": {
     "@amzn/keplerscript-react-native-reanimated": "~2.0.0",
-    "@amzn/react-native-kepler": "~2.0.0",
     "@amzn/react-native-safe-area-context": "~2.0.0",
     "@amzn/react-native-screens": "~2.0.0",
     "@amzn/react-navigation__core": "~2.0.0",
@@ -30,7 +29,9 @@
     "@react-navigation/native": "^6.1.17",
     "@types/react": "^16.9.49",
     "@types/react-native": "^0.63.20",
-    "@types/react-test-renderer": "^16.9.3"
+    "@types/react-test-renderer": "^16.9.3",
+    "react": "18.2.0",
+    "react-native": "0.72.0"
   },
   "peerDependencies": {
     "@bugsnag/core": "^7.0.0",
