--- a/package.json
+++ b/package.json
@@ -30,5 +30,8 @@
     "react-test-renderer": "18.2.0",
     "typescript": "4.8.4",
     "verdaccio": "^6.1.6"
+  },
+  "overrides": {
+    "nanoid": "3.3.8"
   }
 }
