--- a/packages/kepler-native/package.json
+++ b/packages/kepler-native/package.json
@@ -13,14 +13,13 @@
     "clean-codegen-backups": "rm -rf kepler/turbo-modules/BugsnagKeplerNative.cpp.bak kepler/turbo-modules/BugsnagKeplerNative.h.bak",
     "lint": "eslint src --ext .ts,.tsx",
     "lint:fix": "eslint src --ext .ts,.tsx --fix",
-    "build:js": "tsc -p tsconfig.json",
-    "build:native:debug": "kepler build -b Debug",
-    "build:native:release": "kepler build -b Release",
-    "build": "npm run build:js && npm run build:native:release",
+    "build": "npm run build:js && npm run build:native",
+    "build:release": "npm run build:js && npm run build:native:release",
     "build:debug": "npm run build:js && npm run build:native:debug",
-    "prepack": "npm run build:module",
+    "build:js": "tsc -p tsconfig.json",
     "build:native": "npm run build:native:debug && npm run build:native:release",
-    "build:module": "npm run build:js && npm run build:native"
+    "build:native:debug": "kepler build -b Debug",
+    "build:native:release": "kepler build -b Release"
   },
   "dependencies": {
     "@amzn/keplerscript-turbomodule-api": "^1.0.0"
