--- a/.github/workflows/node-ci.yml
+++ b/.github/workflows/node-ci.yml
@@ -15,9 +15,7 @@ jobs:
           node-version: 22
           cache: 'npm'
 
-      - run: npm install -g verdaccio@5.29.0
-      - run: npm run local-npm:start &
-      - run: rm -f package-lock.json && npm install --registry 'http://0.0.0.0:5539' --legacy-peer-deps
+      - run: npm ci
       - run: npm run test:lint
 
   unit_tests:
@@ -29,7 +27,5 @@ jobs:
           node-version: 22
           cache: 'npm'
 
-      - run: npm install -g verdaccio@5.29.0
-      - run: npm run local-npm:start &
-      - run: rm -f package-lock.json && npm install --registry 'http://0.0.0.0:5539' --legacy-peer-deps
+      - run: npm ci
       - run: npm run test:unit
