--- a/packages/vega/package.json
+++ b/packages/vega/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bugsnag/vega",
-  "version": "0.3.0",
+  "version": "1.0.0",
   "description": "BugSnag error reporter for Vega applications",
   "author": "BugSnag",
   "homepage": "https://www.bugsnag.com/",
@@ -28,7 +28,7 @@
     "@bugsnag/plugin-react": "^7.19.0",
     "@bugsnag/plugin-react-native-global-error-handler": "^7.22.3",
     "@bugsnag/plugin-react-native-unhandled-rejection": "^7.19.0",
-    "@bugsnag/vega-native": "0.3.0",
+    "@bugsnag/vega-native": "^1.0.0",
     "iserror": "^0.0.2"
   },
   "peerDependencies": {
