--- a/packages/vega/package.json
+++ b/packages/vega/package.json
@@ -9,6 +9,9 @@
     "type": "git",
     "url": "git+https://github.com/bugsnag/bugsnag-vega.git"
   },
+  "publishConfig": {
+    "access": "public"
+  },
   "bugs": {
     "url": "https://github.com/bugsnag/bugsnag-vega/issues"
   },
